--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # dependencies
 **/node_modules
-/.pnp
 .pnp.js
 
 # testing
@@ -10,7 +9,9 @@
 /build
 
 # misc
+**/.cache
 **/.DS_Store
+**/.env
 **/.env.local
 **/.env.development.local
 **/.env.test.local
